# newsfeed_summary

./: .gitignore  CONTEXT.md  README.md  main.py  preferences.example.yaml  pyproject.toml  requirements.txt
deploy/: newsfeed-server.service
docs/: knowledge-library.md
docs/adr/: 0001-local-archive-server.md  0002-sqlite-knowledge-library.md  0003-google-drive-archiving.md  0004-tailscale-serve-exposure.md
newsfeed/: archiver.py  backup.py  cli.py  config.py  feedback.py  gmail_client.py  library.py  library_pages.py  llm.py  migrate.py  models.py  parser.py  rebuild.py  renderer.py  scorer.py  server.py  summarizer.py  tagger.py
tests/: test_backup.py  test_library.py  test_migrate.py  test_scorer.py  test_server.py  test_tagger.py
