[project]
name = "newsfeed-summary"
version = "0.1.0"
description = "Daily AI-scored digest of your Gmail newsletters, served to any device on your home network."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
newsfeed = "newsfeed.cli:main"
newsfeed-server = "newsfeed.server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["newsfeed"]
